--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,7 +13,9 @@
             <ColumnDefinition Width="7*" />
         </Grid.ColumnDefinitions>
         <StackPanel MaxWidth="400" MaxHeight="400" Grid.Column="0">
-
+            <Button Name="PauseResumeButton" MaxWidth="100" Click="PauseResumeButton_OnClick"> Pause</Button>
+            <Button Name="ResetButton" MaxWidth="100" Click="ResetButton_OnClick"> Reset</Button>
+            <Separator/>
             <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
                 <TextBlock Padding="2">Total connections </TextBlock>
                 <TextBlock Padding="2" Name="TotalConnectionsText">Unknown</TextBlock>
@@ -49,7 +51,7 @@
                 <TextBlock Padding="2" Name="V6ConnectionsText">Unknown</TextBlock>
             </StackPanel>
 
-            <TextBlock></TextBlock>
+            <Separator/>
             
             <TextBlock Name="PromptText" TextWrapping="Wrap"><Italic>Double-click on a connection to view more information</Italic></TextBlock>
             <TextBlock Name="ProtocolText"></TextBlock>
